[gd_scene load_steps=16 format=3 uid="uid://b65k3ent64b2n"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_leb16"]
[ext_resource type="PackedScene" uid="uid://ba5o8byh6dddb" path="res://scenes/player.tscn" id="2_jn2rh"]
[ext_resource type="AudioStream" uid="uid://dmvf52f1i7y20" path="res://assets/audio/music/TetrisSpotify.mp3" id="2_mw80r"]
[ext_resource type="AudioStream" uid="uid://wuuqu5aotte7" path="res://assets/audio/effects/eat_sound1.mp3" id="4_b3wme"]
[ext_resource type="PackedScene" uid="uid://dutv267w84lh" path="res://scenes/hud.tscn" id="4_b5xol"]
[ext_resource type="AudioStream" uid="uid://f0bjl4prg5gc" path="res://assets/audio/effects/pacman_death.wav" id="4_p2b6q"]
[ext_resource type="AudioStream" uid="uid://dowj4fa6c1udf" path="res://assets/audio/effects/eat_sound2.mp3" id="5_0ty34"]
[ext_resource type="PackedScene" uid="uid://btjrxknvsqn8m" path="res://scenes/submit_score_box.tscn" id="8_8m0t1"]
[ext_resource type="PackedScene" uid="uid://dl2yc2ofs3qmo" path="res://scenes/leaderboard.tscn" id="9_x3lnn"]
[ext_resource type="PackedScene" uid="uid://c5orn7jewfn3l" path="res://scenes/instructions.tscn" id="10_t7gtf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="11_4jshe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="12_6o8uj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="13_wdodc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="14_0skty"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bxlmm"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("4_b3wme")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_0ty34")
stream_1/weight = 1.0

[node name="Main" type="Node"]
script = ExtResource("1_leb16")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mw80r")
volume_db = -3.0
bus = &"Music"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p2b6q")
volume_db = -10.0
bus = &"Effects"

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
bus = &"Effects"

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_bxlmm")
bus = &"Effects"

[node name="Player" parent="." instance=ExtResource("2_jn2rh")]
position = Vector2(587, 283)

[node name="HUD" parent="." instance=ExtResource("4_b5xol")]

[node name="SubmitScoreBox" parent="." instance=ExtResource("8_8m0t1")]
visible = false

[node name="Leaderboard" parent="." instance=ExtResource("9_x3lnn")]

[node name="Instructions" parent="." instance=ExtResource("10_t7gtf")]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("11_4jshe")
track_in_editor = true

[node name="GameState" type="Node" parent="StateChart"]
script = ExtResource("12_6o8uj")
initial_state = NodePath("MainMenu")

[node name="MainMenu" type="Node" parent="StateChart/GameState"]
script = ExtResource("13_wdodc")

[node name="MainMenuToGetReady" type="Node" parent="StateChart/GameState/MainMenu"]
script = ExtResource("14_0skty")
to = NodePath("../../GetReady")
event = &"start"
delay_in_seconds = "0.0"

[node name="GetReady" type="Node" parent="StateChart/GameState"]
script = ExtResource("13_wdodc")

[node name="GetReadyToPlaying" type="Node" parent="StateChart/GameState/GetReady"]
script = ExtResource("14_0skty")
to = NodePath("../../Playing")
event = &"playing"
delay_in_seconds = "0.0"

[node name="Playing" type="Node" parent="StateChart/GameState"]
script = ExtResource("13_wdodc")

[node name="PlayingToPaused" type="Node" parent="StateChart/GameState/Playing"]
script = ExtResource("14_0skty")
to = NodePath("../../Paused")
event = &"pause"
delay_in_seconds = "0.0"

[node name="PlayingToGameOver" type="Node" parent="StateChart/GameState/Playing"]
script = ExtResource("14_0skty")
to = NodePath("../../GameOver")
event = &"game_over"
delay_in_seconds = "0.0"

[node name="Paused" type="Node" parent="StateChart/GameState"]
script = ExtResource("13_wdodc")

[node name="PausedToPlaying" type="Node" parent="StateChart/GameState/Paused"]
script = ExtResource("14_0skty")
to = NodePath("../../Playing")
event = &"unpause"
delay_in_seconds = "0.0"

[node name="GameOver" type="Node" parent="StateChart/GameState"]
script = ExtResource("13_wdodc")

[node name="GameOverToMainMenu" type="Node" parent="StateChart/GameState/GameOver"]
script = ExtResource("14_0skty")
to = NodePath("../../MainMenu")
event = &"to_menu"
delay_in_seconds = "0.0"

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="game_over" from="Player" to="." method="game_over"]
[connection signal="grow" from="Player" to="." method="_on_player_grow"]
[connection signal="num_bombs_changed" from="Player" to="HUD" method="_on_num_bombs_changed"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="submit_score" from="SubmitScoreBox" to="." method="_on_submit_score"]
[connection signal="refresh_requested" from="Leaderboard" to="." method="load_leaderboard"]
